adding colours to the graph edges

--- a/bitcoin-fraud-detection.ipynb
+++ b/bitcoin-fraud-detection.ipynb
@@ -945,7 +945,69 @@
    "id": "17adc1e4-3702-475f-9a50-8751db1c9ac9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "\n",
+    "nodes = []\n",
+    "for node in G.nodes():\n",
+    "    node_info = {\n",
+    "        \"id\": str(node),\n",
+    "        \"label\": str(node),\n",
+    "        \"type\": \"transaction\",   # transaction type for Cytoscape\n",
+    "        \"data\": {}\n",
+    "    }\n",
+    "\n",
+    "    # Risk level classification\n",
+    "    if node in high_risk_ids:\n",
+    "        node_info[\"data\"][\"risk_level\"] = \"High\"\n",
+    "        node_info[\"data\"][\"isFraud\"] = True\n",
+    "    elif node in neighbor_risk_df['txId'].values:\n",
+    "        risk_level = neighbor_risk_df.loc[\n",
+    "            neighbor_risk_df['txId'] == node, 'risk_level'\n",
+    "        ].iloc[0]\n",
+    "        node_info[\"data\"][\"risk_level\"] = risk_level\n",
+    "        node_info[\"data\"][\"isFraud\"] = (risk_level == \"High\")\n",
+    "    else:\n",
+    "        node_info[\"data\"][\"risk_level\"] = \"Safe\"\n",
+    "        node_info[\"data\"][\"isFraud\"] = False\n",
+    "\n",
+    "    nodes.append(node_info)\n",
+    "\n",
+    "edges = []\n",
+    "for i, (src, dst) in enumerate(G.edges()):\n",
+    "    # Fetch transaction-specific info from your dataframe (if available)\n",
+    "    tx_row = df_edges[\n",
+    "        ((df_edges['txId1'] == src) & (df_edges['txId2'] == dst)) |\n",
+    "        ((df_edges['txId1'] == dst) & (df_edges['txId2'] == src))\n",
+    "    ].head(1)\n",
+    "\n",
+    "    edge_data = {\n",
+    "        \"id\": f\"edge-{i}\",\n",
+    "        \"source\": str(src),\n",
+    "        \"target\": str(dst),\n",
+    "        \"type\": \"transaction\",\n",
+    "        \"isFraud\": src in high_risk_ids or dst in high_risk_ids,\n",
+    "        \"weight\": 1,\n",
+    "        \"data\": {}\n",
+    "    }\n",
+    "\n",
+    "    if not tx_row.empty:\n",
+    "        edge_data[\"data\"] = {\n",
+    "            \"amount\": float(tx_row['amount'].iloc[0]) if \"amount\" in tx_row else None,\n",
+    "            \"timestamp\": str(tx_row['timestamp'].iloc[0]) if \"timestamp\" in tx_row else None,\n",
+    "            \"channel\": str(tx_row['channel'].iloc[0]) if \"channel\" in tx_row else None,\n",
+    "            \"risk_flag\": \"High\" if edge_data[\"isFraud\"] else \"Normal\"\n",
+    "        }\n",
+    "\n",
+    "    edges.append(edge_data)\n",
+    "\n",
+    "graph_data = {\"nodes\": nodes, \"edges\": edges}\n",
+    "\n",
+    "with open(\"graph.json\", \"w\") as f:\n",
+    "    json.dump(graph_data, f, indent=2)\n",
+    "\n",
+    "print(\"✅ Graph exported with risk levels + transaction info → graph.json\")"
+   ]
   },
   {
    "cell_type": "code",
